more progress on python wrapper

--- a/wrapper/python/Makefile
+++ b/wrapper/python/Makefile
@@ -1,2 +1,2 @@
 all:
-	$(CC) bsdconv.c -L/usr/local/lib -I/usr/local/include -I/usr/local/include/python2.6/ -fPIC -shared -lbsdconv -o bsdconv.so
+	$(CC) bsdconv.c -Wall -L/usr/local/lib -I/usr/local/include -I/usr/local/include/python2.6/ -fPIC -shared -lbsdconv -o bsdconv.so
