exclude PREFIX from codec path candidates

--- a/Makefile.win
+++ b/Makefile.win
@@ -1,5 +1,6 @@
 PREFIX?=C:/bsdconv
-CFLAGS+=-Wall -DPREFIX='"${PREFIX}"'
+BSDCONV_PATH?=${PREFIX}
+CFLAGS+=-Wall -DPREFIX='"${PREFIX}"' -DBSDCONV_PATH='"${BSDCONV_PATH}"'
 SHLIBVER=4
 CC=mingw32-gcc
 
